--- a/jyshop/pom.xml
+++ b/jyshop/pom.xml
@@ -30,6 +30,10 @@
     <dependencies>
         <!--<dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-quartz</artifactId>
+        </dependency>-->
+        <!--<dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-cache</artifactId>
         </dependency>-->
         <dependency>
