--- a/googleGuiceTest/pom.xml
+++ b/googleGuiceTest/pom.xml
@@ -29,6 +29,11 @@
             <artifactId>guice</artifactId>
             <version>4.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.inject.extensions</groupId>
+            <artifactId>guice-multibindings</artifactId>
+            <version>4.2.2</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
